# 2025-learning-vulkan

./: .gitignore  CMakeLists.txt
src/: demo.cpp  demo.hpp  main.cpp
src/game/: GameObject.cpp  GameObject.hpp  KeyboardMovementController.cpp  KeyboardMovementController.hpp
src/renderer/: Camera.cpp  Camera.hpp  Device.cpp  Device.hpp  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  SimpleRenderSystem.cpp  SimpleRenderSystem.hpp  SwapChain.cpp  SwapChain.hpp  Window.cpp  Window.hpp
src/shaders/: simple_shader.frag  simple_shader.vert
src/utils/: Hash.hpp
